Fix footer css padding and alignment.

--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -2,7 +2,6 @@ footer.footer {
   border-top: 1px $gray-light solid;
   text-align: center;
   background: #f4f7fc;
-  padding: 30px 0 0 0;
   margin-top: 45px;
 
   @include breakpoint-min(tablet) {
@@ -12,6 +11,10 @@ footer.footer {
   .region {
     padding-top: 20px;
     padding-bottom: 19px;
+  }
+
+  .footer_top_wrapper {
+    padding-top: 30px 0; 
   }
 
   .col-sm-3 {
@@ -62,7 +65,6 @@ footer.footer {
 
   .footer_bottom_wrapper {
     background-color: #dbe5f2;
-    margin-top: 25px;
 
     .footer__bottom {
 
@@ -89,7 +91,7 @@ footer.footer {
             padding: 0;
             margin-top: 10px;
 
-            @include breakpoint-min(tablet) {
+            @include breakpoint-min(desktop) {
               line-height: 1.5;
               margin-top: 0;
               margin-right: 15px;
@@ -127,7 +129,6 @@ footer.footer {
                 background-size: 71px auto;
                 height: 45px;
                 padding: 10px 18px 10px 80px;
-                margin-right: 15px;
               }
             }
           }
